src/objects/CntrbnMdl_ContributionData__c.object
<CustomObject>
    <description>This object allows you to store the data for support contribution of each TSE on monthly basis.</description>
    <fields>
        <fullName>Call_Hold__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Avg_Call Hold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calls__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Avg_Calls</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Backlog__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Case Backlog</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Modifier__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Case Modifier</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cases__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Closed Cases</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Difficulty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Difficulty</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Escalated</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JiveActive__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JiveActive</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JiveContributing__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JiveContributing</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JiveParticipating__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JiveParticipating</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KBs_Reviewed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>KBs Reviewed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KBs_Written__c</fullName>
        <defaultValue>0</defaultValue>
        <label>KBs Written</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Peer_Cases__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Peer Cases</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projects__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Projects</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TSE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TSE</label>
        <referenceTo>CntrbnMdl_TSE__c</referenceTo>
        <relationshipName>Contribution_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Talk_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Avg_Talk Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Dev__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Training_Dev</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Lead__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Training Lead</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contribution Model Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>TSE__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Call_Hold__c</columns>
        <columns>Calls__c</columns>
        <columns>Talk_Time__c</columns>
        <columns>Case_Backlog__c</columns>
        <columns>Case_Modifier__c</columns>
        <columns>Cases__c</columns>
        <columns>Difficulty__c</columns>
        <columns>End_Date__c</columns>
        <columns>JiveActive__c</columns>
        <columns>JiveContributing__c</columns>
        <columns>JiveParticipating__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CDN-{0000000}</displayFormat>
        <label>Contribution Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contribution Model Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>